--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Hello World</title>
+    <title>James Quirk</title>
   </head>
   <body>
-    <h1>Hello World</h1>
-    <p>This is a web page.</p>
-    <a href="https://engineering.dartmouth.edu/news/dartmouth-interns-gain-research-experience-at-erdcs-cold-regions-research-and-engineering-laboratory">My research</a>
-    <img src="images/test.png">
+    <h1>James Quirk</h1>
+    <img src="images/me.png">
+    <p>My name is James Quirk, and I'm a sophomore studying Engineering and Computer Science at Dartmouth! Here's a look at my research:</p>
+    <a href="https://engineering.dartmouth.edu/news/dartmouth-interns-gain-research-experience-at-erdcs-cold-regions-research-and-engineering-laboratory">CRREL Surface Characterization</a>
   </body>
 </html>
