--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>James Quirk</title>
+    <link rel="stylesheet" href="assets/stylesheets/main.css">
   </head>
   <body>
     <h1>James Quirk</h1>
-    <img src="images/me.png">
+    <img src="assets/images/me.png">
     <p>My name is James Quirk, and I'm a sophomore studying Engineering and Computer Science at Dartmouth! Here's a look at my research:</p>
     <a href="https://engineering.dartmouth.edu/news/dartmouth-interns-gain-research-experience-at-erdcs-cold-regions-research-and-engineering-laboratory">CRREL Surface Characterization</a>
   </body>
