Change image details

--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+
+
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -7,7 +9,7 @@
   </head>
   <body>
     <h1>James Quirk</h1>
-    <img src="assets/images/me.png">
+    <div class="background"></div>
     <h2>About Me!</h2>
     <p>My name is James Quirk, and I'm a sophomore studying Engineering and Computer Science at Dartmouth! Here's a look at my research:</p>
     <a href="https://engineering.dartmouth.edu/news/dartmouth-interns-gain-research-experience-at-erdcs-cold-regions-research-and-engineering-laboratory">CRREL Surface Characterization</a>
