--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
     <div class="background"></div>
     <h2>About Me!</h2>
     <p>My name is James Quirk, and I'm a sophomore studying Engineering and Computer Science at Dartmouth! Here's a look at my research:</p>
-    <a href="https://engineering.dartmouth.edu/news/dartmouth-interns-gain-research-experience-at-erdcs-cold-regions-research-and-engineering-laboratory">CRREL Surface Characterization</a>
+    <a href="https://engineering.dartmouth.edu/news/dartmouth-interns-gain-research-experience-at-erdcs-cold-regions-research-and-engineering-laboratory">Thayer - Surface Characterization</a>
+    <a href="https://www.erdc.usace.army.mil/Media/Images/igphoto/2003014847/">CRREL - Surface Characterization</a>
+    <p>I've also spent my fair share of time in the clouds as a pilot!</p>
+    <p><a href="https://youtu.be/5IejvQq3TUs">Here</a> is a video of the first time I flew by myself, back when I was 16!</p>
+    <p>And <a href="https://youtu.be/B7o22wn-Xgc">here</a> is one of the first time I flew a plane at night.</p>
+    <p>My last video is <a href="https://youtube.com/shorts/qL1c1aY-IBg">this one</a> of my first time flying a helicopter.</p>
+    
 
   </body>
 </html>
