--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   </head>
   <body>
     <h1>James Quirk</h1>
-    <div class="background"></div>
+    <div class="background">
+        <p>Test</p>
+    </div>
     <h2>About Me!</h2>
     <p>My name is James Quirk, and I'm a sophomore studying Engineering and Computer Science at Dartmouth! Here's a look at my research:</p>
     <a href="https://engineering.dartmouth.edu/news/dartmouth-interns-gain-research-experience-at-erdcs-cold-regions-research-and-engineering-laboratory">Thayer - Surface Characterization</a>
