--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1>James Quirk</h1>
-    <img src="images/assets/image/me.png"
+    <img src="assets/images/me.png"
         style="max-width: 50%;">
     <h2>About Me!</h2>
     <p>My name is James Quirk, and I'm a sophomore studying Engineering and Computer Science at Dartmouth! Here's a look at my research:</p>
