--- a/index.html
+++ b/index.html
@@ -9,8 +9,16 @@
   </head>
   <body>
     <h1>James Quirk</h1>
-    <img src="assets/images/me.png"
-        style="max-width: 50%;">
+    
+    <div class="images">
+        <div class="left">
+          <img src="assets/images/me.png" style="width:50%">
+        </div>
+        <div class="right">
+          <img src="assets/images/me2.png" style="width:50%">
+        </div>
+      </div>
+        
     <h2>About Me!</h2>
     <p>My name is James Quirk, and I'm a sophomore studying Engineering and Computer Science at Dartmouth! Here's a look at my research:</p>
     <a href="https://engineering.dartmouth.edu/news/dartmouth-interns-gain-research-experience-at-erdcs-cold-regions-research-and-engineering-laboratory">Thayer - Surface Characterization</a>
