--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <h2>About Me!</h2>
     <p>My name is James Quirk, and I'm a sophomore studying Engineering and Computer Science at Dartmouth! I'm from Little Rock, Arkansas, originally, but I also lived in Park City, Utah, for a few years. Here's a look at some of my research:</p>
     
-    <hr color=#b7b0ff>
+    <hr color=#6D6D6D>
     <a href="https://engineering.dartmouth.edu/news/dartmouth-interns-gain-research-experience-at-erdcs-cold-regions-research-and-engineering-laboratory">Thayer - Surface Characterization</a>
     <a href="https://www.erdc.usace.army.mil/Media/Images/igphoto/2003014847/">CRREL - Surface Characterization</a>
     
-    <hr color=#b7b0ff>
+    <hr color=#6D6D6D>
     <p>I've also spent my fair share of time in the clouds as a pilot!</p>
     <p><a href="https://youtu.be/5IejvQq3TUs">Here</a> is a video of the first time I flew by myself, back when I was 16!</p><!--
     --><p>And <a href="https://youtu.be/B7o22wn-Xgc">here</a> is one of the first time I flew a plane at night.</p><!--
