Change new lines

--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
         
     <h2>About Me!</h2>
     <p>My name is James Quirk, and I'm originally from Little Rock, Arkansas, but I also lived in Park City, Utah, from 2011 to 2015. I love skiing, playing chess, and spending time with my bunny Belinda.</p>
-    <hr>
+    <hr color="white">
 
     <h2>Work and Education</h2>
     <p>I graduated from Bentonville High School in 2021, where I graduated in the top 1% of my class as a National AP Scholar and National Merit Scholar. 'm a sophomore at Dartmouth College majoring in Engineering Sciences and Computer Science with and minoring in French. I have worked as an engineering intern at the Cold Regions Research Lab in Hanover since January, 2022, specializing in surface characterization. You can look at my recognition for my research here:</p>
     <a href="https://engineering.dartmouth.edu/news/dartmouth-interns-gain-research-experience-at-erdcs-cold-regions-research-and-engineering-laboratory">Thayer - Surface Characterization</a>
-    <hr>
+    <hr color="white">
     <a href="https://www.erdc.usace.army.mil/Media/Images/igphoto/2003014847/">CRREL - Surface Characterization</a>
     
-    <hr>
+    <hr color="white">
 
     <h2>Skills</h2>
 
