--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <img src="assets/images/me3.png" style="width:40%">
         <img src="assets/images/me.png" style="width:40%">
     </div>
+    <hr color="black">
         
     <h2>About Me!</h2>
     <p>My name is James Quirk, and I'm originally from Little Rock, Arkansas, but I also lived in Park City, Utah, from 2011 to 2015. I love skiing, playing chess, and spending time with my bunny Belinda.</p>
