--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
         <p>My last video is <a href="https://youtube.com/shorts/qL1c1aY-IBg">this one</a> of my first time flying a helicopter.</p>
     </div>
     
+    <h2>Development</h2>
+
+    <p>There is nothing I love more than the simultaneous entertainment value and educational value of programming. Computer science provides me with a creative outlet for the ideas that are constantly bouncing around my head for improvement. My favorite aspect of coding is the problem-solving aspect of taking on a new challenge, but it goes beyond learning; it is a means of creating an impact by minimizing inefficiencies or limiting inequity of access to resources through technology, which grows more ubiquitous each day.</p>
+    <hr color="black">
+    <p>I'm excited to be applying for DALI because it allows me to combine my loves for problem-solving and learning with an ability to enact change in a realm beyond Dartmouth.</p>
 
   </body>
 </html>
