Text final updates

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     <p>I'm proficient in the coding languages Python, Java, Linux, and C. I am also conversationally fluent in French and completed Dartmouth's beginner track in Japanese. I've also spent my fair share of time in the clouds as a pilot!</p>
     
     <div class="videos">
-        <p><a href="https://youtu.be/5IejvQq3TUs">Here</a> is a video of the first time I flew by myself, back when I was 16!</p>
-        <p>And <a href="https://youtu.be/B7o22wn-Xgc">here</a> is one of the first time I flew a plane at night.</p>
-        <p>My last video is <a href="https://youtube.com/shorts/qL1c1aY-IBg">this one</a> of my first time flying a helicopter.</p>
+        <h5><a href="https://youtu.be/5IejvQq3TUs">Here</a> is a video of the first time I flew by myself, back when I was 16!</p>
+        <h5>And <a href="https://youtu.be/B7o22wn-Xgc">here</a> is one of the first time I flew a plane at night.</p>
+        <h5>My last video is <a href="https://youtube.com/shorts/qL1c1aY-IBg">this one</a> of my first time flying a helicopter.</p>
     </div>
     
     <h2>Development</h2>
