--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <h1>James Quirk</h1>
     
     <div class="images">
-        <img src="assets/images/me3.png" style="width:40%">
-        <img src="assets/images/me.png" style="width:40%">
+        <img src="assets/images/me3.png" style="width:100%">
+        <img src="assets/images/me.png" style="width:100%">
     </div>
     <hr color="black">
     <hr color="black">
@@ -24,7 +24,7 @@
     <hr color="black">
 
     <h2>Work and Education</h2>
-    <p>I graduated from Bentonville High School in 2021, where I graduated in the top 1% of my class as a National AP Scholar and National Merit Scholar. 'm a sophomore at Dartmouth College majoring in Engineering Sciences and Computer Science with and minoring in French. I have worked as an engineering intern at the Cold Regions Research Lab in Hanover since January, 2022, specializing in surface characterization. You can look at my recognition for my research here:</p>
+    <p>I graduated from Bentonville High School in 2021, where I graduated in the top 1% of my class as a National AP Scholar and National Merit Scholar. I'm a sophomore at Dartmouth College majoring in Engineering Sciences and Computer Science with and minoring in French. I have worked as an engineering intern at the Cold Regions Research Lab in Hanover since January, 2022, specializing in surface characterization. You can look at my recognition for my research here:</p>
     <hr color="black">
     <p><a href="https://engineering.dartmouth.edu/news/dartmouth-interns-gain-research-experience-at-erdcs-cold-regions-research-and-engineering-laboratory">Thayer - Surface Characterization</a></p>
     <a href="https://www.erdc.usace.army.mil/Media/Images/igphoto/2003014847/">CRREL - Surface Characterization</a>
@@ -37,9 +37,9 @@
     <p>I'm proficient in the coding languages Python, Java, Linux, and C. I am also conversationally fluent in French and completed Dartmouth's beginner track in Japanese. I've also spent my fair share of time in the clouds as a pilot!</p>
     
     <div class="videos">
-        <h5><a href="https://youtu.be/5IejvQq3TUs">Here</a> is a video of the first time I flew by myself, back when I was 16!</p>
-        <h5>And <a href="https://youtu.be/B7o22wn-Xgc">here</a> is one of the first time I flew a plane at night.</p>
-        <h5>My last video is <a href="https://youtube.com/shorts/qL1c1aY-IBg">this one</a> of my first time flying a helicopter.</p>
+        <h5><a href="https://youtu.be/5IejvQq3TUs">Here</a>is a video of the first time I flew by myself, back when I was 16!</p>
+        <h5>And<a href="https://youtu.be/B7o22wn-Xgc">here</a>is one of the first time I flew a plane at night.</p>
+        <h5>My last video is<a href="https://youtube.com/shorts/qL1c1aY-IBg">this one</a>of my first time flying a helicopter.</p>
     </div>
 
     <hr color="black">
