Back to top button

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <h1>James Quirk</h1>
     
     <div class="images">
-        <img src="assets/images/me3.png" style="width:100%">
         <img src="assets/images/me.png" style="width:100%">
+        <img src="assets/images/me3.png" style="width:100%">
     </div>
     <hr color="black">
     <hr color="black">
@@ -50,6 +50,10 @@
     <p>There is nothing I love more than the simultaneous entertainment value and educational value of programming. Computer science provides me with a creative outlet for the ideas that are constantly bouncing around my head for improvement. My favorite aspect of coding is the problem-solving aspect of taking on a new challenge, but it goes beyond learning; it is a means of creating an impact by minimizing inefficiencies or limiting inequity of access to resources through technology, which grows more ubiquitous each day.</p>
     <hr color="black">
     <p>I'm excited to be applying for DALI because it allows me to combine my loves for problem-solving and learning with an ability to enact change in a realm beyond Dartmouth.</p>
+
+    <a href="https://jamesfq.github.io/jamesquirk.me/">
+        <button style="background-color: white; color:black; border-radius: 5px;">Back to Top</button>
+    </a>
 
   </body>
 </html>
