--- a/index.html
+++ b/index.html
@@ -36,11 +36,21 @@
 
     <p>I'm proficient in the coding languages Python, Java, Linux, and C. I am also conversationally fluent in French and completed Dartmouth's beginner track in Japanese. I've also spent my fair share of time in the clouds as a pilot!</p>
     
-    <div class="videos">
-        <h5><a href="https://youtu.be/5IejvQq3TUs">Here</a>is a video of the first time I flew by myself, back when I was 16!</p>
-        <h5>And<a href="https://youtu.be/B7o22wn-Xgc">here</a>is one of the first time I flew a plane at night.</p>
-        <h5>My last video is<a href="https://youtube.com/shorts/qL1c1aY-IBg">this one</a>of my first time flying a helicopter.</p>
-    </div>
+    <p>Here is a video of the first time I flew by myself, back when I was 16!</p>
+    <a href="https://youtu.be/5IejvQq3TUs">
+        <button style="background-color: white; color:black; border-radius: 5px;">Solo Landing</button>
+    </a>
+
+    <p>And here is a video of the first time I flew a plane at night.</p>
+    <a href="https://youtu.be/B7o22wn-Xgc">
+        <button style="background-color: white; color:black; border-radius: 5px;">Night Flight</button>
+    </a>
+    
+    <p>My last video is a recording of the first time I flew a helicopter.</p>
+    <a href="https://youtube.com/shorts/qL1c1aY-IBg">
+        <button style="background-color: white; color:black; border-radius: 5px;">Helicopter</button>
+    </a>
+
 
     <hr color="black">
     <hr color="black">
