--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <hr color="black">
         
     <h2>About Me!</h2>
-    <p>My name is James Quirk, and I'm originally from Little Rock, Arkansas, but I also lived in Park City, Utah, from 2011 to 2015. I love skiing, playing chess, and spending time with my bunny Belinda.</p>
+    <p>Hey! My name is James Quirk, and I'm originally from Little Rock, Arkansas, but I also lived in Park City, Utah, when I was in elementary and middle school. I love skiing, playing chess, and spending time with my bunny Belinda.</p>
     
     <hr color="black">
     <hr color="black">
