--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     
     <p>Here is a video of the first time I flew by myself, back when I was 16!</p>
     <a href="https://youtu.be/5IejvQq3TUs">
-        <button style="background-color: white; color:black; border-radius: 5px;">Solo Landing</button>
+        <button style="background-color: white; color:black; border-radius: 5px; width:50px; height:auto">Solo Landing</button>
     </a>
 
     <p>And here is a video of the first time I flew a plane at night.</p>
