Start off retry

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     
     <button onclick="toggle()" style="background-color: white; color:black; border-radius: 5px;">See image</button>
     
-    <div class="planeImage">
+    <div class="planeImage", id ="planeImage">
         <img src="assets/images/plane.png" style="width:100%">
     </div>
 
