--- a/index.html
+++ b/index.html
@@ -45,9 +45,7 @@
     
     <button onclick="toggle()" style="background-color: white; color:black; border-radius: 5px;">See image</button>
     
-    <div class="planeImage", id ="planeImage">
-        <img src="assets/images/plane.png" style="width:100%">
-    </div>
+    <img src="assets/images/plane.png" style="width:100%" id="planeImage">
 
     <p>Here is a video of the first time I flew by myself, back when I was 16 years old!</p>
     <a href="https://youtu.be/5IejvQq3TUs">
