--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@
 
     <p>I'm proficient in the coding languages Python, Java, Linux, and C. I am also conversationally fluent in French and completed Dartmouth's beginner track in Japanese. I've also spent my fair share of time in the clouds as a pilot! I earned my Private Pilot's License when I was 17 years old.</p>
     
+    <img src="assets/images/work.png" style="width:100%">
+
     <button onclick="toggle()" style="background-color: white; color:black; border-radius: 5px;">More on planes</button>
     
-    <div id="morePlanes">
+    <div id="morePlanes" hidden>
         <p>Here is a video of the first time I flew by myself, back when I was 16 years old!</p>
         <a href="https://youtu.be/5IejvQq3TUs">
             <button style="background-color: white; color:black; border-radius: 5px;">Solo landing</button>
