--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <title>James Quirk</title>
     <link rel="stylesheet" href="assets/stylesheets/main.css">
+    <link rel="functions" href="assets/stylesheets/functions.js">
   </head>
   <body>
     <h1>James Quirk</h1>
