--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <h2>Work and Education</h2>
     <p>I attended Bentonville High School, where I graduated in 2021 in the top 1% of my class as a National AP Scholar and National Merit Scholar. I'm a sophomore at Dartmouth College majoring in Engineering Sciences and Computer Science with and minoring in French. I have worked as an engineering intern at the Cold Regions Research Lab in Hanover since January, 2022, specializing in surface characterization.</p> 
     
-    <img src="assets/images/plane.png" style="width:100%">
+    <img src="assets/images/work.png" style="width:100%">
 
     <p>You can look at my recognition for my research here:</p>
     <hr color="black">
