Include back to top button

--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
 
     <p>Here is a video of the first time I flew by myself, back when I was 16 years old!</p>
     <!--Creates a button that stores a link to my videos-->
-    <button id="flight1" class="flight">Solo Flight</button>
+    <button id="flight1" class="myButton">Solo Flight</button>
     <iframe id="vid1" class="hiddenVideo" width="560" height="315" src="https://www.youtube.com/embed/5IejvQq3TUs?si=DSa6VLJzeQjeO4M4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
     <p>And here is a video of the first time I flew a plane at night.</p>
-    <button id="flight2" class="flight">Night Flight</button>
+    <button id="flight2" class="myButton">Night Flight</button>
     <iframe id="vid2" class="hiddenVideo" width="560" height="315" src="https://www.youtube.com/embed/B7o22wn-Xgc?si=P3jzaHfElXfIC3xg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     
     <p>My last video is a recording of the first time I flew a helicopter.</p>
-    <button id="flight3" class="flight">Helicopter</button>
+    <button id="flight3" class="myButton">Helicopter</button>
     <br>
     <iframe id = "vid3" class="hiddenVideo" width="560" height="315" src="https://www.youtube.com/embed/qL1c1aY-IBg?si=28-TtGxNPS5B2vWo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
@@ -85,9 +85,8 @@
     <p>I'm excited to be applying for DALI because it allows me to combine my loves for problem-solving and learning with an ability to enact change in a realm beyond Dartmouth.</p>
 
     <!--Links the user back to the top of the page via a hyperlink to the website-->
-    <a href="https://jamesfq.github.io/jamesquirk.me/">
-        <button style="background-color: white; color:black; border-radius: 5px;">Back to top</button>
-    </a>
+    <button id="backtotop" class="myButton">Back to top</button>
+
     
     <script src="assets/stylesheets/functions.js"></script>
 
