Scrolling using Observer API

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
       <h2>Work and Education</h2>
       
-      <div class="container">
+      <div class="container containerLeft">
         <div class="container-item">
           <p>I graduated from <a style="font-weight: bold">Bentonville High School</a> in 2021 in the <a style="font-weight: bold">Top 1%</a> of my class as a <a style="font-weight: bold">National AP Scholar</a> and <a style="font-weight: bold">National Merit Scholar</a>. I was also recognized in the Arkansas Times as a member of the <a id="allStar" class="inTextLink">2021 Arkansas Academic All-Star</a> team.
         </div>
@@ -89,7 +89,7 @@
         </div>
       </div>
 
-      <div class="container">
+      <div class="container containerRight">
         <div class="container-item glow">
           <img class="interestsImage images fadeIn" src="assets/images/dartmouth.png">
         </div>
@@ -98,7 +98,7 @@
         </div>
       </div>
 
-      <div class="container">
+      <div class="container containerLeft">
         <div class="container-item">
           <p>I spent the summer of 2022 working full-time as an engineering intern at the US Army Corps of Engineers <a style="font-weight: bold">Cold Regions Research and Engineering Laboratory</a>, where I now work part-time. My research focuses on materials science, specifically with respect to the behavior of aluminum surfaces in cold environments. You can check out my recognition for my research <a id="research" class="inTextLink">here</a>.</p>
         </div>
@@ -107,7 +107,7 @@
         </div>
       </div>
 
-      <div class="container">
+      <div class="container containerRight">
         <div class="container-item glow">
           <img class="interestsImage images fadeIn" src="assets/images/river.png">
         </div>
@@ -124,7 +124,7 @@
 
       <h2>Skills</h2>
       <h3>Languages</h3>
-      <div id="languageContainer" class="interestsContainer">
+      <div id="languageContainer" class="container containerLeft">
         <div id="language" class="container-item">
           <p>English: Native</p>
           <img class="fadeIn" src="assets/images/america.png">
@@ -142,7 +142,7 @@
       <hr>
 
       <h3>Coding</h3>
-      <div class="interestsContainer">
+      <div class="container containerLeft">
         <div id="code" class="container-item">
           <img class="fadeIn" src="assets/images/python.png">
         </div>
@@ -181,7 +181,7 @@
       <hr>
 
       <h3>Design</h3>
-      <div class="interestsContainer">
+      <div class="container containerLeft">
         <div id="code" class="container-item">
           <img class="fadeIn" src="assets/images/sw.png">
         </div>
@@ -193,7 +193,7 @@
       <hr>
 
       <h3>Pilot!</h3>
-      <div class="container">
+      <div class="container containerLeft">
         <div style="flex: 0.5" class="container-item">
           <p>I started flying when I went to the municipal airport in my hometown for the first time. I was excited about the innovation of the aircraft and the ability to learn a new skill, so at the age of 14 I began to take lessons. When I was 16, I flew by myself for the first time, and when I turned 17 I earned my <a style="font-weight: bold">Private Pilot's License</a>.
         </div>
