Introduction of music

--- a/index.html
+++ b/index.html
@@ -228,6 +228,27 @@
       <p>I'm excited to be applying for DALI because it allows me to combine my loves for problem-solving and learning with an ability to enact change in a realm beyond Dartmouth.</p>
     </section>
 
+    <section id="music">
+      <hr>
+
+      <h2 id="thisTest">Music</h2>
+
+      <h3 id="thisRes">Doja Cat</h3>
+
+      <div id="spotify" class="container containerLeft">
+        <div id="code" class="container-item">
+          <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/47362Yh7VtOwx9jSpNssds?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        </div>
+        <div id="code" class="container-item">
+          <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3HcRR40qkr7juMhnS8SlNu?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        </div>
+        <div id="code" class="container-item">
+          <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0cbP8fBXcA7NT4MYlOYlaN?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        </div>
+      </div>
+
+    </section>
+    
     <div class="interestsContainer">
       <div id="github" class="socials container-item">
         <img class="fadeIn" src="assets/images/github.png">
@@ -243,7 +264,6 @@
     <!--Links the user back to the top of the page via a hyperlink to the website-->
     <button id="backtotop" class="topButton">Back to top</button>
 
-    
     <script src="assets/stylesheets/functions.js"></script>
 
   </body>
