Update to have API based off of github link, not local host

--- a/index.html
+++ b/index.html
@@ -257,10 +257,10 @@
       <input type="button" class="myButton accessItem" onclick="requestAuthorization()" value="Login">
     </div>
 
-    <p>Click below to get started!</p>
+    <p>Click below to see!</p>
 
     <div id="accessInfo" class="container" style="flex-flow: column">
-      <input type="button" class="myButton" onclick="refreshArtists()" value="Find Artists">
+      <input type="button" class="myButton accessInput" onclick="refreshArtists()" value="Find Artists">
       <select id="artists" class="accessInput"></select>
     </div>
     
