Get rid of DALI specifications

--- a/index.html
+++ b/index.html
@@ -244,52 +244,7 @@
       <iframe id = "vid3" class="hiddenVideo" width="560" height="315" src="https://www.youtube.com/embed/qL1c1aY-IBg?si=28-TtGxNPS5B2vWo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </section>
 
-    <section id="development">
-      <hr>
-
-      <h2>Development</h2>
-
-      <p>For me, programming is a source of entertainment and education! Computer science provides me with a creative outlet for my ideas of improvements to society. I love problem-solving, and the creativity that comes with programming is an added bonus!</p>
-      <p>I'm excited to be applying for DALI because it allows me to combine my loves for problem-solving and learning with an ability to enact change in a realm beyond Dartmouth.</p>
-    </section>
-
-    <section id="music">
-      <hr>
-
-      <h2>Music</h2>
-      <p>Some of my favorite songs right now!</p>
-      <div id="spotify" class="container containerLeft">
-        <div class="music">
-          <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/47362Yh7VtOwx9jSpNssds?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-        </div>
-        <div class="music">
-          <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3HcRR40qkr7juMhnS8SlNu?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-        </div>
-        <div class="music">
-          <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0cbP8fBXcA7NT4MYlOYlaN?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-        </div>
-      </div>
-
-    </section>
-
-    <p>Log in to see my top artists in the last four weeks and their top hits!</p>
-
-    <div id="accessInfo" class="container" style="flex-flow: column">
-      <input type="text" id="client_id" class = "accessItem accessInput" placeholder="Client ID">
-      <input type="text" id="client_secret" class = "accessItem accessInput" placeholder="Client Secret">
-      <input type="button" class="myButton accessItem" onclick="requestAuthorization()" value="Login">
-    </div>
-
-    <p>Click below to see!</p>
-
-    <div id="accessInfo" class="container" style="flex-flow: column">
-      <input type="button" class="myButton accessInput" onclick="refreshArtists()" value="Find Artists">
-      <select id="artists" class="accessInput"></select>
-    </div>
-    
-    <iframe id="sampleArtist" style="border-radius:12px" src="" width="100%" height="0" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-
-    <p>Thanks for checking me out.</p>
+    <p>Thanks for checking me out!</p>
 
     <div class="staticContainer">
       <div id="github" class="socials container-item">
